frontend/src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* .login button,
.messagebox button,
.mid button,
.profile button,
.newgroup button,
.login textarea,
.messagebox textarea,
.mid textarea,
.profile textarea,
.newgroup textarea {
  color: black;
  background-color: white;
} */

.hidden {
  display: none !important;
}

.styleaslink {
  cursor: pointer;
}

.cat {
  width: 350px;
  height: 350px;
}

.body {
  display: flex;
  position: relative;
}

.profilebackground {
  width: 100%;
  min-height: 50vh;
  background-color: lightgray;
  /* background-image: url("https://plus.unsplash.com/premium_photo-1723568460657-2113d189c4a6?q=80&w=2304&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); */
  background-size: 100% 100%;
  background-repeat: no-repeat;
  position: relative;
  cursor: pointer;
}

.dispchange {
}

.highlight {
  cursor: pointer;
}

.highlight:hover {
  font-weight: bold;
  color: navy;
}

.green {
  background-color: green;
  color: white;
}

.grey {
  background-color: dimgray;
}

.biotext {
  width: 30vw;
  height: 100px;
}

.passwordwrapper {
  display: flex;
  flex-direction: column;
  gap: 10px;
  justify-content: center;
  align-items: center;
}

.changepass,
.biobutton {
  width: 200px;
  height: 40px;
}

.biobutton {
  margin-left: 5vw;
}

.changepass {
  margin-right: 5vw;
}

.biodiv,
.xmargin {
  display: flex;
  flex-direction: column;
  gap: 10px;
  justify-content: center;
  align-items: center;
  text-align: center;
  max-height: 40vh;
}

.xmargin p {
  width: 60vw;
  height: 15vh;
  word-wrap: break-word;
  overflow: auto;
}

.profilegroup {
  /* display: flex;
  justify-content: space-between;
  align-items: center; */
  padding: 10px 5vw;
  /* gap: 10px; */
}

button {
  border: 1px solid black !important;
}

.red {
  background-color: red;
  color: white;
  border-color: white;
}

.groupedtogether {
  display: flex;
  gap: 20px;
  /* position: absolute;
  top: 15vh;
  left: 5vw; */
}

.left {
  width: 5vw;
  height: 100vh;
  flex-direction: column;
  background-color: black;
  color: white;
  display: flex;
  justify-content: space-around;
  align-items: center;
  white-space: initial;
  /* min-width: 50px; */
  /* position: absolute;
  bottom: 0px;
  left: 0px; */
}
.ago {
  grid-area: 1 / 4 / 1 / 5;
  /* position: absolute;
    left: 65%;
    top: 35%; */
}

.chatbutton {
  position: absolute;
  left: 70%;
  top: 25%;
}

.orange {
  background-color: orange;
}

.newgroup {
  height: 100vh;
  width: 80vw;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 50px;
  gap: 20px;
}

#groupname {
  width: 300px;
  height: 40px;
}

.yesorno {
  display: flex;
  gap: 20px;
}

#firstmessage {
  width: 500px;
  height: 60px;
}

.editdelwrapper {
}

.edit {
  /* width: 50px;
  height: 50px; */
}

.groupinfo {
  word-wrap: break-word;
  display: flex;
  flex-direction: column;
  justify-content: center;
  max-width: 50vw;
}

.chatmenu {
  height: 15%;
  width: 100%;
  border-bottom: 1px solid black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;
  padding-left: 5%;
  padding-right: 5%;
  position: sticky;
  top: 0;
  left: 0;
}

.chatmenutop {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 10%;
}

.searchbar {
  width: 100px;
  height: 25px;
}

.textmessage {
  word-wrap: break-word;
  padding-bottom: 5px;
}

.chatmenubot {
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.mid {
  border-right: 3px solid black;
  height: 100vh;
  width: 15vw;
  min-width: 320px;
  color: black;
  background-color: white;
}

.overflowdiv {
  overflow-y: scroll;
  height: 85%;
}

.wrap {
  border-bottom: 1px solid black;
  display: grid;
  grid-template-columns: 1fr 6fr 11fr 3fr 2fr;
  /* justify-content: space-between;
  align-items: center; */
  justify-items: start;
  align-items: center;
  height: 100px;
  cursor: pointer;
  position: relative;
}
.chatinfotop {
  height: 10%;
  width: 100%;
  /* position: sticky; */
  display: flex;
  gap: 10px;
  padding: 20px;
  align-items: center;
  border-bottom: 2px solid black;
  justify-content: space-between;
}

.collrightsvg {
  position: absolute;
  top: 0px;
  left: 0px;
}

.collleft {
  display: flex;
  justify-content: flex-end;
  display: none;
  position: absolute;
  top: 0px;
  right: 0px;
}

.collright {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  display: none;
  position: relative;
}

.profcollright {
  position: absolute;
  left: 10px;
  top: 20px;
  width: 30px;
  height: 30px;
  /* background-color: white; */
  /* display: flex;
  justify-content: center;
  align-items: center; */
  display: none;
}

.wrap:hover {
  background-color: blue;
  color: white;
}

.messagebox {
  height: 100vh;
  width: min(80vw, calc(95vw - 320px));
  position: relative;
  display: flex;
  flex-direction: column;
  color: black;
  background-color: white;
  /* min-width: 500px; */
  /* overflow: hidden; */
}

.profile {
  height: 100vh;
  width: min(80vw, calc(95vw - 320px));
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 2vh;
  color: black;
  background-color: white;
  /* padding: 0 10vw; */
  /* overflow: hidden; */
}

#entermessage {
  width: 60vw;
  height: 70%;
  display: flex;
  margin: auto;
  margin: 0 10px;
}

.grouped,
.chatdeletediv {
  display: flex;
  gap: 50px;
}

.buttonsmobile {
  display: flex;
  gap: 20px;
}

.row {
  display: flex;
  gap: 30px;
  align-items: center;
}

.newchatrow {
  display: flex;
  gap: 10px;
  align-items: center;
}

.col {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
/* ... */

